k8s/fraud-detection-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-detection-service
  namespace: bankflow
  labels:
    app: fraud-detection-service
    part-of: bankflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fraud-detection-service
  template:
    metadata:
      labels:
        app: fraud-detection-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8083"
    spec:
      containers:
        - name: fraud-detection-service
          image: ghcr.io/sanju562586/bankflow-fraud-detection-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
            limits:
              cpu: 1200m
              memory: 1024Mi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-service
  namespace: bankflow
  labels:
    app: fraud-detection-service
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
      name: http
  selector:
    app: fraud-detection-service
