k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: bankflow
  labels:
    app: notification-service
    part-of: bankflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8084"
    spec:
      containers:
        - name: notification-service
          image: ghcr.io/sanju562586/bankflow-notification-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 800m
              memory: 768Mi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8084
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8084
            initialDelaySeconds: 25
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: bankflow
  labels:
    app: notification-service
spec:
  type: ClusterIP
  ports:
    - port: 8084
      targetPort: 8084
      name: http
  selector:
    app: notification-service
